# streaming-ui

./: .editorconfig  .gitignore  .lintstagedrc.js  DEVELOPMENT.md  README.md  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyrightconfig.json
.github/workflows/: ci.yml  docker-publish.yml
front/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml
front/src/app/: layout.tsx  page.tsx
front/src/app/basic/: page.tsx
front/src/app/chat/: page.tsx
front/src/components/: ChatCard.tsx  GNB.tsx  StreamingCard.tsx
front/src/hooks/: useSSE.ts
front/src/lib/: sse-client.ts
front/src/store/: useSSEStore.ts
server/: .dockerignore  .env.example  .flake8  .gitignore  DB_IMPROVEMENTS.md  Dockerfile  README.md  poetry.toml  pyproject.toml  run.py  schema_snapshot.md
server/app/: main.py
server/app/api/: routes.py
server/app/api/routers/: __init__.py  chat.py  health.py  oracle.py  redis.py  stream.py
server/app/core/: config.py  exceptions.py  lifespan.py  logging.py
server/app/db/: README.md  connection.py  dependencies.py  models.py  streaming_helpers.py
server/app/schemas/: __init__.py  api.py  streaming.py
server/app/services/: chat_streaming.py  generic_streaming.py  oracle_streaming.py  redis_streaming.py
server/tools/: __init__.py  schema_dump.py
